// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconButton> Props should forward any CSS class 1`] = `
<Tooltip
  delay={500}
  placement="bottom"
>
  <ButtonRoot
    className="component component--is-tested"
    emphasis="high"
    size="m"
    theme="light"
    variant="icon"
  >
    <Icon />
  </ButtonRoot>
</Tooltip>
`;

exports[`<IconButton> Props should use default props 1`] = `
<Tooltip
  delay={500}
  placement="bottom"
>
  <ButtonRoot
    emphasis="high"
    size="m"
    theme="light"
    variant="icon"
  >
    <Icon />
  </ButtonRoot>
</Tooltip>
`;

exports[`<IconButton> Snapshots and structure should render icon button 1`] = `
<Tooltip
  delay={500}
  placement="bottom"
>
  <ButtonRoot
    emphasis="high"
    size="m"
    theme="light"
    variant="icon"
  >
    <Icon />
  </ButtonRoot>
</Tooltip>
`;
